2008-04-24  Michael Hutchinson <mhutchinson@novell.com> 

	* Makefile.am, MonoDevelop.Components.mdp,
	  MonoDevelop.Components/FixedWidthWrapLabel.cs, gtk-gui/objects.xml:
	  Add new WrapLabel widget.

2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 

	* gtk-gui/objects.xml, Makefile.am, MonoDevelop.Components.mdp:
	  Updated.
	* MonoDevelop.Components/MenuButton.cs: New button that drops down a
	  menu.

2008-03-18  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Components/FileSelector.cs: Fix disposal issues.

2008-03-10  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Components.mdp,
	  MonoDevelop.Components.Commands/LinkCommandEntry.cs,
	  MonoDevelop.Components.Commands/CommandMenuItem.cs,
	  MonoDevelop.Components.Commands/CommandFrame.cs,
	  MonoDevelop.Components.Commands/CommandSelectedEventArgs.cs,
	  MonoDevelop.Components.Commands/CommandManager.cs,
	  MonoDevelop.Components.Commands/CommandCheckMenuItem.cs: Added
	  event to be fired when a menu item is selected. To be used for
	  showing the description of the item in the status bar.

2008-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs: If a shortcut can't be
	  handled, propagate the key press event to the widget that generated it.

2008-02-14  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml, gtk-gui/gui.stetic, Makefile.am,
	  MonoDevelop.Components.mdp, MonoDevelop.Components/TreeViewState.cs,
	  MonoDevelop.Components/NotebookButtonBar.cs: Added TreeViewState class,
	  which helps saving/restoring the state of a tree view. Added
	  NotebookButtonBar.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Components.Commands.ExtensionNodes/CommandItemCodon.cs,
	  MonoDevelop.Components.Commands/CommandMenuItem.cs,
	  MonoDevelop.Components.Commands/CommandCheckMenuItem.cs,
	  MonoDevelop.Components.Commands/CommandEntry.cs: It's now possible to